--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <!-- Dr. Renjith T. -->
                 <div class="resource-person-card">
                     <img src="renjith.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=TR';" alt="Dr. T. Renjith" class="resource-person-img">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Dr. T. Renjith</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Dr. Renjith T</h3>
                     <p class="text-blue-700 font-medium mb-2">Postdoctoral Fellow, Indian Statistical Institute (ISI), Bangalore</p>
                     <p class="text-gray-700 text-sm leading-relaxed">
                         Dr. Renjith received his Ph.D. from IISc Bangalore and was formerly at IIT Bombay. His area is Partial Differential Equations. He is a popular teacher at instructional and research workshops.
@@ -275,7 +275,7 @@
                                 <td>1 August</td>
                                 <td>PH</td>
                                 <td>PH</td>
-                                <td>TR</td>
+                                <td>RT</td>
                                 <td>Tutorial</td>
                             </tr>
                         </tbody>
@@ -285,7 +285,7 @@
                     <p><strong>Speaker Abbreviations:</strong></p>
                     <ul class="list-disc list-inside ml-4">
                         <li>PH - Dr. Pranav Haridas</li>
-                        <li>RT - Dr. T. Renjith</li>
+                        <li>RT - Dr. Renjith T</li>
                         <li>AJJ - Prof. A. J. Jayanthan</li>
                     </ul>
                     <p class="mt-4"><strong>Tutorial Tutors:</strong></p>
