--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <li class="syllabus-item">Series Tests: convergence tests, special series</li>
                         <li class="syllabus-item">Limits and Continuity: types, differentiability</li>
                     </ul></br>
-                    <a href="/Lecture_1.pdf" style="color: blue;">Click Here</a> for study materials.
+                    <a href="Lecture_1.pdf" style="color: blue;">Click Here</a> for study materials.
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold text-gray-800 mb-3">Abstract Algebra</h3>
