--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 <!-- Dr. Pranav Haridas -->
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
                     <img src="pranav.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=PH';" alt="Dr. Pranav Haridas" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">Dr. Pranav Haridas</h3>
+                    <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
+                        <a href="pranavharidas.pages.dev">Dr. Pranav Haridas</a>
+                    </h3>
                     <p class="text-blue-700 font-medium mb-2 text-sm sm:text-base">Kerala School of Mathematics (KSoM)</p>
                     <p class="text-gray-700 text-xs sm:text-sm leading-relaxed">
                         Dr. Pranav Haridas received his Ph.D. from IISc Bangalore and has held postdoctoral positions at IIT Madras and CMI. His area is Complex Analysis. He is a widely respected teacher and organizer of several research workshops.
@@ -113,7 +115,9 @@
                 <!-- Dr. T. Renjith -->
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
                     <img src="renjith.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=TR';" alt="Dr. T. Renjith" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">Dr. Renjith T</h3>
+                    <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
+                        <a href="t-renjith.github.io">Dr. Renjith T</a>
+                    </h3>
                     <p class="text-blue-700 font-medium mb-2 text-sm sm:text-base">Indian Statistical Institute (ISI), Bangalore</p>
                     <p class="text-gray-700 text-xs sm:text-sm leading-relaxed">
                         Dr. Renjith received his Ph.D. from IISc Bangalore. His area is Partial Differential Equations. He is a popular teacher at instructional and research workshops.
