--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
                     <img src="pranav.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=PH';" alt="Dr. Pranav Haridas" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
-                        <a href="pranavharidas.pages.dev">Dr. Pranav Haridas</a>
+                        <a href="https://pranavharidas.pages.dev">Dr. Pranav Haridas</a>
                     </h3>
                     <p class="text-blue-700 font-medium mb-2 text-sm sm:text-base">Kerala School of Mathematics (KSoM)</p>
                     <p class="text-gray-700 text-xs sm:text-sm leading-relaxed">
@@ -116,7 +116,7 @@
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
                     <img src="renjith.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=TR';" alt="Dr. T. Renjith" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
-                        <a href="t-renjith.github.io">Dr. Renjith T</a>
+                        <a href="https://t-renjith.github.io">Dr. Renjith T</a>
                     </h3>
                     <p class="text-blue-700 font-medium mb-2 text-sm sm:text-base">Indian Statistical Institute (ISI), Bangalore</p>
                     <p class="text-gray-700 text-xs sm:text-sm leading-relaxed">
