--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <li class="syllabus-item">Groups, subgroups, cosets, cyclic and abelian groups</li>
                         <li class="syllabus-item">Group examples: $S_{n}$, $A_{n}$, $D_{n}$, $Q_{8}$</li>
                         <li class="syllabus-item">Homomorphism, Isomorphism</li>
-                        <li class="syllabus-item">Fields and Rings</li>
+                        <li class="syllabus-item">Group Actions</li>
                     </ul></br>
                     <a href="" style="color: blue;">Click Here</a> for study materials.
                     <h3 class="text-xl font-semibold text-gray-800 mt-6 mb-3">Linear Algebra</h3>
@@ -249,7 +249,7 @@
             <p class="text-lg sm:text-xl font-semibold text-blue-700 mb-4">
                 <a href="mailto:anoopvp@kannuruniv.ac.in" class="hover:underline">anoopvp@kannuruniv.ac.in</a>
             </p>
-            <p class="text-base sm:text-lg leading-relaxed mb-1"><strong>Organizers:</strong> Anoop V. P., Sruthymurali</p>
+            <p class="text-base sm:text-lg leading-relaxed mb-1"><strong>Organizers:</strong> <a href="https://vpanoop.github.io">Anoop V. P.</a>, Sruthymurali</p>
             <p class="text-base sm:text-lg leading-relaxed">Department of Mathematical Sciences, Kannur University</p>
         </section>
 
