--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between">
             <!-- Logos and Main Title Block -->
             <div class="flex flex-col sm:flex-row items-center mb-4 md:mb-0 text-center sm:text-left">
-                <img src="ku.jpg" onerror="this.onerror=null;this.src='https://placehold.co/80x80/ffffff/4299e1?text=KU';" alt="Kannur University Logo" class="h-16 sm:h-20 w-auto mx-2 rounded-full">
+                <img src="images/ku.jpg" onerror="this.onerror=null;this.src='https://placehold.co/80x80/ffffff/4299e1?text=KU';" alt="Kannur University Logo" class="h-16 sm:h-20 w-auto mx-2 rounded-full">
                 <div class="mx-4">
                     <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-tight mt-2 sm:mt-0">Bridge Course</h1>
                     <p class="text-lg sm:text-xl md:text-2xl mt-1">Analysis, Algebra & Linear Algebra</p>
                 </div>
-                <img src="pmusha.jpg" onerror="this.onerror=null;this.src='https://placehold.co/80x80/ffffff/4299e1?text=PM-USHA';" alt="PM-USHA Logo" class="h-16 sm:h-20 w-auto mx-2 rounded-full mt-2 sm:mt-0">
+                <img src="images/pmusha.jpg" onerror="this.onerror=null;this.src='https://placehold.co/80x80/ffffff/4299e1?text=PM-USHA';" alt="PM-USHA Logo" class="h-16 sm:h-20 w-auto mx-2 rounded-full mt-2 sm:mt-0">
             </div>
             <!-- Dates and Location Block -->
             <div class="text-center md:text-right">
@@ -92,7 +92,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Prof. A. J. Jayanthan -->
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
-                    <img src="jayanthan.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=AJJ';" alt="Prof. A. J. Jayanthan" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
+                    <img src="images/jayanthan.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=AJJ';" alt="Prof. A. J. Jayanthan" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">Prof. A. J. Jayanthan</h3>
                     <p class="text-blue-700 font-medium mb-2 text-sm sm:text-base">Kerala School of Mathematics (KSoM)</p>
                     <p class="text-gray-700 text-xs sm:text-sm leading-relaxed">
@@ -102,7 +102,7 @@
 
                 <!-- Dr. Pranav Haridas -->
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
-                    <img src="pranav.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=PH';" alt="Dr. Pranav Haridas" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
+                    <img src="images/pranav.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=PH';" alt="Dr. Pranav Haridas" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
                         <a href="https://pranavharidas.pages.dev">Dr. Pranav Haridas</a>
                     </h3>
@@ -114,7 +114,7 @@
 
                 <!-- Dr. T. Renjith -->
                 <div class="resource-person-card flex flex-col items-center text-center p-6 bg-gray-50 rounded-xl shadow-md transition-transform duration-200 hover:translate-y-[-5px]">
-                    <img src="renjith.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=TR';" alt="Dr. T. Renjith" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
+                    <img src="images/renjith.jpg" onerror="this.onerror=null;this.src='https://placehold.co/120x120/4299e1/ffffff?text=TR';" alt="Dr. T. Renjith" class="resource-person-img w-24 h-24 sm:w-32 sm:h-32 rounded-full object-cover mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold text-gray-900 mb-2">
                         <a href="https://t-renjith.github.io">Dr. Renjith T</a>
                     </h3>
