--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <p class="text-lg sm:text-xl font-semibold text-blue-700 mb-4">
                 <a href="mailto:anoopvp@kannuruniv.ac.in" class="hover:underline">anoopvp@kannuruniv.ac.in</a>
             </p>
-            <p class="text-base sm:text-lg leading-relaxed mb-1"><strong>Organizers:</strong> <a href="https://vpanoop.github.io">Anoop V. P</a>, Sruthymurali</p>
+            <p class="text-base sm:text-lg leading-relaxed mb-1"><strong>Organizers:</strong> <a href="https://vpanoop.github.io">Anoop V. P.</a>, Sruthymurali</p>
             <p class="text-base sm:text-lg leading-relaxed">Department of Mathematical Sciences, Kannur University</p>
         </section>
 
