--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <li class="syllabus-item">Vector spaces, fields, subspaces</li>
                         <li class="syllabus-item">Span, linear independence, basis, dimension</li>
                     </ul></br>
-                    <a href="" style="color: blue;">Click Here</a> for study materials.
+                    <a href="materials/linear.pdf" style="color: blue;">Click Here</a> for study materials.
                 </div>
             </div>
         </section>
